# Vehicle-Insurance-MLOps

./: .dockerignore  .gitignore  Dockerfile  README.md  demo.py  projectflow.txt  pyproject.toml  setup.py
notebook/: exp_notebook.ipynb
src/cloud_storage/: aws_storage.py
src/components/: model_evaluation.py
src/configuration/: aws_connection.py  mongo_db_connection.py
src/constants/: __init__.py
src/entity/: artifact_entity.py  config_entity.py
src/exception/: __init__.py
src/logger/: __init__.py
src/pipline/: training_pipeline.py
static/css/: style.css
